feat：1. 增加membership会员模块 2.个性话题推荐实现 3.mcp增强 4.权限增强 5.兴趣权限算法实现